--- a/springboot-vue-crud/src/main/resources/templates/home/index.html
+++ b/springboot-vue-crud/src/main/resources/templates/home/index.html
@@ -36,6 +36,8 @@
                 <el-container>
                     <div>
                         <h3>优雅的入门Spring Boot框架，实现简单的CRUD</h3>
+                        <br>
+                        <h3 th:text="'你好！'+${session.username}"></h3>
                     </div>
                 </el-container>
             </el-col>
