--- a/springboot-vue-crud/src/main/resources/templates/home/index.html
+++ b/springboot-vue-crud/src/main/resources/templates/home/index.html
@@ -14,7 +14,7 @@
     <el-menu mode="horizontal" :default-active="activeIndex">
         <el-menu-item index="0" id="logo">Spring Boot入门</el-menu-item>
         <el-menu-item index="1"><a th:href="@{/index}">首页</a></el-menu-item>
-        <el-menu-item index="2"><a th:href="@{/good/goods}">商品列表</a></el-menu-item>
+        <el-menu-item index="2"><a th:href="@{/good}">商品列表</a></el-menu-item>
         <el-menu-item id="author" index="3">
             <img class="el-tooltip" src="https://hitopo.github.io/images/avatar.jpeg"/>
             <el-dropdown>
@@ -23,7 +23,7 @@
                     <el-dropdown-item>首页</el-dropdown-item>
                     <el-dropdown-item><a href="https://github.com/hitopo" target="_blank">GitHub</a></el-dropdown-item>
                     <el-dropdown-item><a href="https://hitopo.github.io/" target="_blank">Blog</a></el-dropdown-item>
-                    <el-dropdown-item divided><a th:href="@{/user/logout}">退出</a></el-dropdown-item>
+                    <el-dropdown-item divided><a th:href="@{/logout}">退出</a></el-dropdown-item>
                 </el-dropdown-menu>
             </el-dropdown>
         </el-menu-item>
