--- a/springboot-vue-crud/src/main/resources/templates/home/register.html
+++ b/springboot-vue-crud/src/main/resources/templates/home/register.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>注册界面</title>
     <link rel="stylesheet" th:href="@{/lib/element-ui/lib/theme-chalk/index.css}"/>
     <link rel="stylesheet" th:href="@{/css/login.css}">
     <link rel="stylesheet" th:href="@{/lib/font/icon/iconfont.css}">
@@ -33,7 +33,8 @@
                                 </el-form-item>
                                 <el-form-item prop="repassword"
                                               :rules="[{ required: true, message: '请再次输入密码'}]">
-                                    <el-input prefix-icon="el-icon-ump-anquan" v-model="register.repassword"
+                                    <el-input prefix-icon="el-icon-ump-anquan" type="password"
+                                              v-model="register.repassword"
                                               @keyup.enter.native="registerEnter('register')"
                                               auto-complete="off"></el-input>
                                 </el-form-item>
