--- a/springboot-vue-crud/src/main/resources/templates/site/goods.html
+++ b/springboot-vue-crud/src/main/resources/templates/site/goods.html
@@ -15,7 +15,7 @@
     <el-menu mode="horizontal" :default-active="activeIndex">
         <el-menu-item index="0" id="logo">Spring Boot入门</el-menu-item>
         <el-menu-item index="1"><a th:href="@{/index}">首页</a></el-menu-item>
-        <el-menu-item index="2"><a th:href="@{/good/goods}">商品列表</a></el-menu-item>
+        <el-menu-item index="2"><a th:href="@{/good}">商品列表</a></el-menu-item>
         <el-menu-item id="author" index="3">
             <img class="el-tooltip" src="https://hitopo.github.io/images/avatar.jpeg"/>
             <el-dropdown>
